--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.10.1"
